--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
    <title>Avtaar Assignment 1</title>
    <meta name="description" content="" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <link rel="stylesheet" href="style.css">
    <script>
       function generate(){
       const username = document.getElementById('username').value;
@@ -34,12 +33,10 @@
    </script>
 </head>
 <body>
-   <meta charset="utf-8">
-   <title>Avtaar Assignment 1</title>
    <input type="text" name="username" id="username" placeholder="Enter a username"/>
    <button onclick="generate();">Generate</button>
    <p id="usernameOutput"></p>
    <p id="uniqueidOutput"></p>
    <p id="dateoutput"></p>
-   <body>
 </body>
+</html>
